--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <!-- Hero Section -->
   <main class="hero">
     <video autoplay muted loop class="hero-video">
-      <source src="assets/videos/waterfall.mp4" type="video/mp4">
+      <source src="assets/videos/Waterfall.mp4" type="video/mp4">
     </video>
 
     <div class="hero-overlay"></div>
@@ -56,3 +56,4 @@
 
 </body>
 </html>
+
